Fixed downshiftSelect, added forwardRef to Button

--- a/src/ui/form/common/composedInputs/DownshiftSelect/downshift_select.scss
+++ b/src/ui/form/common/composedInputs/DownshiftSelect/downshift_select.scss
@@ -8,6 +8,9 @@ Classes :
 
 .downshift_select{
 
+  .button {
+    overflow:visible;
+  }
   .popup {
     border:var(--form-border);
     border-radius:var(--form-border-radius);
